--- a/Unit 2/part 1/angular-products/src/app/product-list/product-list.component.html
+++ b/Unit 2/part 1/angular-products/src/app/product-list/product-list.component.html
@@ -3,22 +3,55 @@
     {{ title }}
   </div>
   <div class="card-block">
+    <form class="form mt-3">
+      <div class="form-group row">
+        <label class="col-form-label col-sm-2 text-sm-right" for="filterDesc">
+          Filter:
+        </label>
+        <div class="col-sm-5">
+          <input
+            type="text"
+            [(ngModel)]="filterSearch"
+            class="form-control"
+            name="filterDesc"
+            id="filterDesc"
+            placeholder="Filter..."
+          />
+        </div>
+        <label class="col-form-label col-sm-5">
+          Filtered by: {{ filterSearch }}
+        </label>
+      </div>
+    </form>
     <div class="table-responsive" *ngIf="products && products.length">
       <table class="table table-striped">
         <thead>
           <tr>
-            <th>{{ headers.image }}</th>
+            <th>
+              <button
+                class="btn btn-sm"
+                [ngClass]="{
+                  'btn-danger': showImage,
+                  'btn-primary': !showImage
+                }"
+                (click)="toggleImage()"
+              >
+                {{ showImage ? 'Hide' : 'Show' }} images
+              </button>
+            </th>
             <th>{{ headers.description }}</th>
             <th>{{ headers.price }}</th>
             <th>{{ headers.available }}</th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let product of products">
-            <td><img [src]="product.imageUrl" alt=""></td>
+          <tr *ngFor="let product of products; let isEven = even">
+            <td><img [src]="product.imageUrl" *ngIf="showImage" alt="" /></td>
             <td>{{ product.description }}</td>
-            <td>{{ product.price }}</td>
-            <td>{{ product.available }}</td>
+            <td [ngStyle]="{ color: colors[color] }" (click)="changeColor()">
+              {{ product.price | currency:'EUR':'symbol' }}
+            </td>
+            <td>{{ product.available | date:'dd/MM/yyyy' }}</td>
           </tr>
         </tbody>
       </table>
