--- a/Unit 2/part 2/angular-products/src/app/star-rating/star-rating.component.html
+++ b/Unit 2/part 2/angular-products/src/app/star-rating/star-rating.component.html
@@ -1,7 +1,9 @@
-<div class="star-container">
+<div class="star-container" (mouseleave)="restoreRating()">
   <span
     *ngFor="let star of [1, 2, 3, 4, 5]"
     class="fa-star"
-    [ngClass]="{ 'fas': star <= rating, 'far': star > rating }"
+    [ngClass]="{ 'fas': star <= auxRating, 'far': star > auxRating }"
+    (mouseenter)="auxRating = star"
+    (click)="setRating(star)"
   ></span>
 </div>
