--- a/Unit 2/part 3/angular-products/src/app/product-detail/product-detail.component.html
+++ b/Unit 2/part 3/angular-products/src/app/product-detail/product-detail.component.html
@@ -14,8 +14,11 @@
       ></star-rating>
     </div>
     <div>
-      <button type="button" class="btn btn-default" (click)="goBack()">
+      <button type="button" class="btn btn-primary" (click)="goBack()">
         Go back
+      </button>
+      <button type="button" class="btn btn-secondary ml-3" (click)="edit()">
+        Edit product
       </button>
     </div>
   </div>
