--- a/Unit 2/part 3/angular-products/src/app/product-detail/product-detail.component.html
+++ b/Unit 2/part 3/angular-products/src/app/product-detail/product-detail.component.html
@@ -1,14 +1,13 @@
 <div class="card">
   <div class="card-header bg-primary text-white">
-    {{ product?.description }}
+    {{ product.description }}
   </div>
   <div class="card-block p-3 text-center">
     <img [src]="product?.imageUrl" alt="" />
-    <div>Price: {{ product?.price | currency: 'EUR':'symbol' }}</div>
-    <div>Available since: {{ product?.available | date: 'dd/MM/y' }}</div>
+    <div>Price: {{ product.price | currency: 'EUR':'symbol' }}</div>
+    <div>Available since: {{ product.available | date: 'dd/MM/y' }}</div>
     <div>
       <star-rating
-        *ngIf="product"
         [rating]="product.rating"
         (ratingChanged)="changeRating($event)"
       ></star-rating>
