--- a/Unit 2/part 4/angular-products/src/app/app.component.html
+++ b/Unit 2/part 4/angular-products/src/app/app.component.html
@@ -1,23 +1,4 @@
-<nav class="navbar navbar-expand navbar-dark bg-dark mb-4">
-  <a class="navbar-brand" href="#">{{ title }}</a>
-  <ul class="navbar-nav mr-auto">
-    <li class="nav-item">
-      <a class="nav-link"
-        [routerLink]="['/welcome']"
-        [routerLinkActive]="['active']">
-        Welcome
-      </a>
-    </li>
-
-    <li class="nav-item">
-      <a class="nav-link"
-        [routerLink]="['/products']"
-        [routerLinkActive]="['active']">
-        Products
-      </a>
-    </li>
-  </ul>
-</nav>
+<menu-top [title]="title"></menu-top>
 <div class="container-fluid">
   <router-outlet></router-outlet>
 </div>
