--- a/Unit 2/part 6/angular-reactive-forms/src/app/app.component.css
+++ b/Unit 2/part 6/angular-reactive-forms/src/app/app.component.css
@@ -5,3 +5,8 @@ input.ng-touched.ng-invalid {
 input.ng-touched.ng-valid {
   border: 1px solid green;
 }
+
+div.ng-invalid[formGroupName="emailGroup"]
+  input.ng-touched[formControlName="emailConfirm"] {
+  border: 1px solid red;
+}
