--- a/Unit 3/ionic-example/src/app/list/list.page.html
+++ b/Unit 3/ionic-example/src/app/list/list.page.html
@@ -1,27 +1,36 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>
-      List
-    </ion-title>
+    <ion-title>Lists</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let item of items">
-      <ion-icon [name]="item.icon" slot="start"></ion-icon>
-      {{item.title}}
-      <div class="item-note" slot="end">
-        {{item.note}}
-      </div>
+    <ion-list-header>
+      People
+    </ion-list-header>
+    <ion-item>
+      <ion-avatar slot="star">
+        <img src="assets/tiofeo.jpg" alt="">
+        <ion-label>
+          <h2>Ugly man</h2>
+          <h3>I'm a big deal</h3>
+          <p>Listen, I've had a pretty messed up day...</p>
+        </ion-label>
+      </ion-avatar>
+    </ion-item>
+    <ion-item>
+      <ion-avatar slot="star">
+        <img src="assets/tioraro.jpg" alt="">
+        <ion-label>
+          <h2>Weird man</h2>
+          <h3>I don't know who am I</h3>
+          <p>More text...</p>
+        </ion-label>
+      </ion-avatar>
     </ion-item>
   </ion-list>
-  <!--
-    <div *ngIf="selectedItem" padding>
-      You navigated here from <b>{{selectedItem.title }}</b>
-    </div>
-  -->
 </ion-content>
