--- a/Unit 3/ionic-example/src/app/list/list.page.html
+++ b/Unit 3/ionic-example/src/app/list/list.page.html
@@ -9,28 +9,33 @@
 
 <ion-content>
   <ion-list>
-    <ion-list-header>
+    <ion-item>Item 1</ion-item>
+    <ion-item>Item 2</ion-item>
+    <ion-item>Item 3</ion-item>
+  </ion-list>
+  <ion-list>
+    <ion-list-header color="light">
       People
     </ion-list-header>
     <ion-item>
-      <ion-avatar slot="star">
-        <img src="assets/tiofeo.jpg" alt="">
-        <ion-label>
-          <h2>Ugly man</h2>
-          <h3>I'm a big deal</h3>
-          <p>Listen, I've had a pretty messed up day...</p>
-        </ion-label>
+      <ion-avatar slot="start">
+        <img src="./assets/tiofeo.jpg">
       </ion-avatar>
+      <ion-label>
+        <h2>Ugly man</h2>
+        <h3>I'm a big deal</h3>
+        <p>Listen, I've had a pretty messed up day...</p>
+      </ion-label>
     </ion-item>
     <ion-item>
-      <ion-avatar slot="star">
-        <img src="assets/tioraro.jpg" alt="">
-        <ion-label>
-          <h2>Weird man</h2>
-          <h3>I don't know who am I</h3>
-          <p>More text...</p>
-        </ion-label>
+      <ion-avatar slot="start">
+        <img src="./assets/tioraro.jpg">
       </ion-avatar>
+      <ion-label>
+        <h2>Weird man</h2>
+        <h3>I don't know who am I</h3>
+        <p>More text...</p>
+      </ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
