--- a/Unit 3/ionic-example/src/app/buttons/buttons.page.html
+++ b/Unit 3/ionic-example/src/app/buttons/buttons.page.html
@@ -25,7 +25,7 @@
     <ion-button size="large" color="dark">Dark</ion-button>
 
     <header>Block Width</header>
-    <ion-button expand="block">A block button</ion-button>
+    <ion-button expand="block" color="twitter">A block button</ion-button>
 
     <header>Full Width</header>
     <ion-button expand="full" color="secondary">A full-width button</ion-button>
