--- a/Unit 3/ionic-products/src/app/products/product-details/product-info/product-info.page.html
+++ b/Unit 3/ionic-products/src/app/products/product-details/product-info/product-info.page.html
@@ -4,7 +4,7 @@
 
 <ion-content>
   <ion-card *ngIf="product">
-    <ion-img [src]="product.imageUrl"></ion-img>
+    <img [src]="product.imageUrl">
     <ion-card-content>
       <ion-card-title>{{product.description}}</ion-card-title>
       <ion-card-subtitle>{{product.price | currency:'EUR':'symbol'}}</ion-card-subtitle>
