--- a/Unit 3/ionic-capacitor/src/app/local-notifications/local-notifications.page.html
+++ b/Unit 3/ionic-capacitor/src/app/local-notifications/local-notifications.page.html
@@ -24,5 +24,5 @@
       <ion-button expand="block" color="danger" [disabled]="!scheduled" (click)="cancelNotification()">Cancel</ion-button>
     </ion-col>
   </ion-row>
-  <p *ngIf="triggered">The notification has been triggered!</p>
+  <p *ngIf="triggered">The user has tapped on the notification!</p>
 </ion-content>
